Archive2/e9/66841d7825171d/output
main.cpp: In function 'void showFloatArray(const std::vector<float>&)':
main.cpp:7:12: error: found ':' in nested-name-specifier, expected '::'
     for (f : v) {
            ^
main.cpp:7:10: error: 'f' has not been declared
     for (f : v) {
          ^
main.cpp:11:1: error: expected primary-expression before '}' token
 }
 ^
main.cpp:11:1: error: expected ')' before '}' token
main.cpp:11:1: error: expected primary-expression before '}' token
